add user and video model

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://username:Password@cluster0.4lto0.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=ACCESS_TOKEN_SECRET
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=REFRESH_TOKEN_SECRET
+REFRESH_TOKEN_EXPIRY=10d
